--- a/src/pug/core/_html.pug
+++ b/src/pug/core/_html.pug
@@ -1,6 +1,7 @@
 include _functions
 include _mixins
 include _vars
+include _logo
 include _nav
 
 block vars
@@ -53,7 +54,7 @@ block document
         block footer
           footer
             hr._m0
-            ._container: small| &copy; !{year} !{author}. All rights reserved.
+            ._container: small| &copy; !{year} !{author}
 
         block widget
           aside#_widgets
