--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -3,7 +3,7 @@
   name        = 'BareCSS'
   title       = 'BareCSS'
   description = 'Minimal framework for a clean layout.'
-  vision      = 'To create the best collection of a clean layout.'
+  vision      = 'To create the best collection of clean layouts.'
   version     = '0.1.0.(alpha)'
 
   //- metadata
