--- a/src/scss/core_1/_colors.scss
+++ b/src/scss/core_1/_colors.scss
@@ -25,10 +25,12 @@ $dark_contra : #ffffff;
 
 // link colors
 $linkTc          : $blue;
+$linkTc_hover    : $orange;
 $linkTc_visited  : $purple;
 $linkTc_active   : $red;
 
 // dark link colors
 $dark_linkTc          : $dark_blue;
+$dark_linkTc_hover    : $dark_orange;
 $dark_linkTc_visited  : $dark_purple;
 $dark_linkTc_active   : $dark_red;
