--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -14,7 +14,8 @@ block append style
     ._dark #logo .s1 { color:#fff }
     ._dark #logo .s2 { color:#7a8eea }
     a #logo { cursor:pointer }
-    a #logo:hover { background-color:#8883 }
+    a #logo:hover { background-color:#fff }
+    ._dark a #logo:hover { background-color:#fff3 }
     a #logo:active { opacity:.3 }
     .maindesc {
       font-size: 0.9em;
