--- a/src/pug/basics/core/index.html.pug
+++ b/src/pug/basics/core/index.html.pug
@@ -1,9 +1,9 @@
 extends ../../core/_html
 
 block append vars
-  - pageid = 'basics'
-  - title = `Basics | ${name}`
-  - description = 'Common layouts.'
+  - pageid = 'core'
+  - title = `Core | ${name}`
+  - description = 'Core components.'
 
 block header
   header._container
@@ -14,4 +14,4 @@ block header
 block article
   +main_nav
   hr
-  +basic_nav
+  +core_nav
