--- a/src/pug/core/_logo.pug
+++ b/src/pug/core/_logo.pug
@@ -17,7 +17,7 @@ block append style
     a #logo:hover { background-color:#fff }
     ._dark a #logo:hover { background-color:#fff3 }
     a #logo:active { opacity:.3 }
-    .maindesc {
+    #maindesc {
       font-size: 0.9em;
       line-height: 1.25;
       vertical-align: text-top;
