--- a/src/pug/index/lab/index.html.pug
+++ b/src/pug/index/lab/index.html.pug
@@ -12,12 +12,11 @@ block append style
 block header
   header._container
     +logo
-    span.maindesc= description
+    span#maindesc= description
   hr
 
 block article
-  nav._container: +main_nav
+  +main_nav
   article
     hr
-    section._container: +lab_nav
-    hr
+    +lab_nav
