--- a/src/pug/index/lab/test.html.pug
+++ b/src/pug/index/lab/test.html.pug
@@ -12,27 +12,16 @@ block append style
 block header
   header._container
     +logo
-    span.maindesc= description
+    span#maindesc= description
   hr
 
 block article
-  nav._container: +main_nav
+  +main_nav
   article(style="padding-bottom:1.8rem")
     hr
-    section._container: +lab_nav
+    +lab_nav
     hr
     section._container
-      |#[span._u_dotted Dotted] 
-      |#[span._u_dashed Dashed] 
-      |#[span._u_double Double] 
-      |#[span._u_wavy Wavy] 
-    hr
-    section._container
-      details
-        summary._no_select Summary
-        div._content._scrollable
-          ._container
-            pre._scrollable.pre
-              +pageData
-      //- details
-    hr
+      pre._scrollable.pre.
+        // Tests goes here ..
+      //- pre.
