--- a/src/pug/core/_vars.pug
+++ b/src/pug/core/_vars.pug
@@ -2,8 +2,7 @@
   //- project
   name        = 'BareCSS'
   title       = 'BareCSS'
-  description = 'Minimal framework for a clean layout.'
-  vision      = 'To create the best collection of clean layouts.'
+  description = 'Minimal framework for a clean interface.'
   version     = '0.1.0.(alpha)'
 
   //- metadata
