--- a/src/pug/index/index.html.pug
+++ b/src/pug/index/index.html.pug
@@ -38,9 +38,18 @@ block article
   article._container
     pre._scrollable.pre
       .
-        Author  : !{author}
-        Year    : !{year}
-        Version : !{version}
+        Name         : !{name}
+        Title        : !{title}
+        Description  : !{description}
+        Version      : !{version}
 
-        LICENSE : !{license}
+        Author       : !{author}
+        Year         : !{year}
+        LICENSE      : !{license}
+
+        URL          : !{siteUrl}
+        URI          : !{homeUri} 
+
+        Last updated : !{today}
+      |
       //- 
