--- a/src/pug/basics/core/link.html.pug
+++ b/src/pug/basics/core/link.html.pug
@@ -21,7 +21,7 @@ block article
     hr
     +core_nav
     hr
-    section._container(style="margin:-.5rem 0 !important")
+    nav._container
       a(href='#')._a2#hyperlink4 Hyperlink
       a(href='#')._a2._link Link
       a(href='#')._a2._visited Visited
@@ -30,7 +30,7 @@ block article
       script.
         document.getElementById('hyperlink4').href+='?t='+(new Date().getTime());
     hr
-    section._container(style="margin:-.5rem 0 !important")
+    nav._container
       a(href='#')._a1#hyperlink3 Hyperlink
       a(href='#')._a1._link Link
       a(href='#')._a1._visited Visited
