--- a/src/scss/core_1/custom.scss
+++ b/src/scss/core_1/custom.scss
@@ -28,4 +28,4 @@ footer {
   ._container { margin:0;padding:.5rem }
 }
 
-main nav._container { margin:-.5rem auto; }
+#main_nav ._container { margin:0 auto; }
