--- a/src/pug/main/lab/test.html.pug
+++ b/src/pug/main/lab/test.html.pug
@@ -1,4 +1,4 @@
-extends ../../core/_html
+extends ../../main/_html
 
 block append vars
   - pageid = 'lab/test'
@@ -13,15 +13,12 @@ block header
   header._container
     +logo
     span#maindesc= description
-  hr
+  +main_nav
 
 block article
-  +main_nav
+  +lab_nav
+  hr
   article(style="padding-bottom:1.8rem")
-    hr
-    +lab_nav
-    hr
-    section._container
-      pre._scrollable.pre.
-        // Tests goes here ..
-      //- pre.
+    section._container: pre._scrollable.pre.
+      // Tests goes here ..
+    //- pre.
