--- a/src/pug/main/_nav.pug
+++ b/src/pug/main/_nav.pug
@@ -41,11 +41,11 @@ mixin core_nav
   //- ['core/textarea','core/textarea.html','Textarea'],
   //- ['core/checkbox','core/checkbox.html','Checkbox'],
   //- ['core/radio','core/radio.html','Radio'],
+  //- ['core/image','core/image.html','Image'],
+  //- ['core/table','core/table.html','Table'],
+  //- ['core/button','core/button.html','Button'],
   +menu_style_a2([
     ['core/text','core/text.html','Text'],
-    ['core/image','core/image.html','Image'],
-    ['core/table','core/table.html','Table'],
-    ['core/button','core/button.html','Button'],
     ['core/link','core/link.html','Link'],
     ['core/details','core/details.html','Details'],
   ])
