--- a/src/scss/core_1/main.scss
+++ b/src/scss/core_1/main.scss
@@ -296,7 +296,7 @@ a[href]._a1,._a1 {
 
 a[href]._a2,._a2 {
   @extend ._a1;
-  margin:.25em .1em;
+  margin:.1em;
   border-radius:.25em;
   padding:0 .5em;
 }
