--- a/src/pug/core/core/index.html.pug
+++ b/src/pug/core/core/index.html.pug
@@ -13,7 +13,7 @@ block header
 
 mixin menu(links)
   each v in links
-    a(href=homeUri+v[1])._a2 #{v[2]}
+    a(href=homeUri+v[1])._a2 !{v[2]}
 
 block article
   +core_nav
@@ -21,7 +21,9 @@ block article
   article
     nav._container
       +menu([
-        ['core/blank','core/blank.html','Blank'],
         ['core/html','core/html.html','Html'],
+        ['core/blank','core/blank.html','Blank'],
+        ['core/404','core/404','&middot;&middot;'],
+        ['core/404','core/404.html','404'],
       ])
     hr
