--- a/src/pug/core/core/link.html.pug
+++ b/src/pug/core/core/link.html.pug
@@ -3,7 +3,7 @@ extends ../../main/_html
 block append vars
   - pageid = 'core/link'
   - title = `Link | ${name}`
-  - description = 'Styling hyperlinks.'
+  - description = 'Intuitive hyperlink styles.'
 
 block append style
   style.
@@ -20,23 +20,50 @@ block article
   hr
   article(style="padding-bottom:1.8rem")
     nav._container
-      a(href='#')._a2#hyperlink4 Hyperlink
+      a(href='#')._a31#hyperlink31 Hyperlink
+      a(href='#')._a31._link Link
+      a(href='#')._a31._visited Visited
+      a(href='#')._a31._hover Hover
+      a(href='#')._a31._active Active
+      script.
+        document.getElementById('hyperlink31').href+='?t='+(new Date().getTime());
+    hr._m0
+    nav._container
+      a(href='#')._a3#hyperlink3 Hyperlink
+      a(href='#')._a3._link Link
+      a(href='#')._a3._visited Visited
+      a(href='#')._a3._hover Hover
+      a(href='#')._a3._active Active
+      script.
+        document.getElementById('hyperlink3').href+='?t='+(new Date().getTime());
+    hr._m0
+    nav._container
+      a(href='#')._a2#hyperlink2 Hyperlink
       a(href='#')._a2._link Link
       a(href='#')._a2._visited Visited
       a(href='#')._a2._hover Hover
       a(href='#')._a2._active Active
       script.
-        document.getElementById('hyperlink4').href+='?t='+(new Date().getTime());
-    hr._mb0
+        document.getElementById('hyperlink2').href+='?t='+(new Date().getTime());
+    hr._m0
     nav._color_2
-      a(href='#')._a1#hyperlink3 Hyperlink
+      a(href='#')._a11#hyperlink11 Hyperlink
+      a(href='#')._a11._link Link
+      a(href='#')._a11._visited Visited
+      a(href='#')._a11._hover Hover
+      a(href='#')._a11._active Active
+      script.
+        document.getElementById('hyperlink11').href+='?t='+(new Date().getTime());
+    hr._m0
+    nav._color_2
+      a(href='#')._a1#hyperlink1 Hyperlink
       a(href='#')._a1._link Link
       a(href='#')._a1._visited Visited
       a(href='#')._a1._hover Hover
       a(href='#')._a1._active Active
       script.
-        document.getElementById('hyperlink3').href+='?t='+(new Date().getTime());
-    hr._mt0
+        document.getElementById('hyperlink1').href+='?t='+(new Date().getTime());
+    hr._m0
     section._container
       |#[a(href='#')#hyperlink Hyperlink] 
       |#[a(href='#')._link Link] 
