--- a/src/pug/core/core/text.html.pug
+++ b/src/pug/core/core/text.html.pug
@@ -2,8 +2,8 @@ extends ../../main/_html
 
 block append vars
   - pageid = 'core/text'
-  - title = `Details | ${name}`
-  - description = 'Styling details and summary elements.'
+  - title = `Text | ${name}`
+  - description = 'Text elements are kept tidy and functional.'
 
 block append style
   style.
