--- a/src/pug/main/lab/temp.html.pug
+++ b/src/pug/main/lab/temp.html.pug
@@ -20,6 +20,6 @@ block article
   hr
   article(style="padding-bottom:1.8rem")
     section._container: pre._scrollable.pre.
-      // Temporary lab stuff that will be implemented in the future.
+      // New features to be implemented soon ..
     //- pre.
     section._container: pre.pre.
