--- a/src/scss/core/main.scss
+++ b/src/scss/core/main.scss
@@ -235,7 +235,7 @@ $select_tc    : #000;
 ._boxline { box-shadow: 0 0 0 1px #ffa20088 inset }
 
 // set simple outline
-._outline { outline: 1px solid #00ff8488 }
+._outline { outline: 1px solid #ff00b788 }
 
 ._color {
   & { @include color( $baseTc, $baseBg ); }
@@ -280,7 +280,7 @@ a[href]._a1,._a1 {
     color: inherit;
     text-decoration: none;
     display:inline-block;
-    padding:.25em .5em;
+    padding:0 .5em;
   }
   &:hover,&._hover { background-color: #8884; }
   &:active,&._active { background-color: #8888; }
@@ -294,11 +294,29 @@ a[href]._a1,._a1 {
   }
 }
 
+a[href]._a11,._a11 {
+  @extend ._a1;
+  padding:.25em .5em;
+}
+
 a[href]._a2,._a2 {
   @extend ._a1;
   margin:.1em;
   border-radius:.25em;
   padding:0 .5em;
+}
+
+a[href]._a3,._a3 {
+  @extend ._a1;
+  margin:.1em;
+  border:1px solid #888;
+  border-radius:.25em;
+  padding:0 .5em;
+}
+
+a[href]._a31,._a31 {
+  @extend ._a3;
+  padding:.25em .75em;
 }
 
 ._tc_blue   { color: $blue   }
@@ -369,23 +387,19 @@ u,._u {
   user-select:none;
 } 
 
-._block { display: block }
-._table { display: table }
-._cell { display: table-cell }
-._inline { display: inline }
-._block { display: block }
-._inblock { display: inline-block }
+._block { display:block }
+._table { display:table }
+._inline { display:inline }
+._inblock { display:inline-block }
+._cell { display:table-cell }
 
-._relative { position: relative }
-._absolute { position: absolute; @include position(0,0) }
-._fixed    { position: fixed; @include position(0,0) }
-._sticky   { position: sticky; @include position(0,0) }
-
-._fullview { position:absolute;top:0;bottom:0;left:0;right:0 }
+._relative { position:relative }
+._absolute { position:absolute; @include position(0,0) }
+._fixed    { position:fixed; @include position(0,0) }
+._sticky   { position:sticky; @include position(0,0) }
+._fullview { position:absolute; @include position(0,0,0,0) }
 
 ._scrollable { overflow:auto }
-
-._flex { display:flex }
 
 ._indent { text-indent: 2em }
 
@@ -398,21 +412,10 @@ u,._u {
 ._valign_middle { vertical-align: middle }
 ._valign_bottom { vertical-align: bottom }
 
-._no_wrap { white-space: nowrap !important }
-
-// for ul and ol
-ul,ol {
-  &._no_bullet,
-  &._plain { list-style-type: none !important }
-  &._plain { padding-left: 0 !important; padding-inline-start: 0 !important }
-  &._no_pad { padding-left: 1em !important; padding-inline-start: 1em !important }
-}
-
-._m0 { margin:0 !important }
-._mt0 { margin-top: 0 !important }
-._mb0 { margin-bottom: 0 !important }
-._ml0 { margin-left: 0 !important }
-._mr0 { margin-right: 0 !important }
+._flex { display:flex }
+._f_row { flex-direction:row }
+._f_column { flex-direction:column }
+._f { flex:1 }
 
 // ._radius
 $radiuses: (
@@ -421,19 +424,36 @@ $radiuses: (
   ""    : 1em
 );
 @each $x, $value in $radiuses { ._radius#{$x}  { border-radius: $value; } }
-
+  
 // ._rotate
 $angles : 45, 90, 135, 180, 225, 270, 315;
 @each $angle in $angles { ._rotate_#{$angle} { transform: rotate(#{$angle}deg); } }
+    
+// for ul and ol
+ul,ol {
+  &._no_bullet,
+  &._plain { list-style-type: none !important }
+  &._plain { padding-left: 0 !important; padding-inline-start: 0 !important }
+  &._no_pad { padding-left: 1em !important; padding-inline-start: 1em !important }
+}
+
+// for margin and padding
+._m0 { margin:0 !important }
+._mt0 { margin-top: 0 !important }
+._mb0 { margin-bottom: 0 !important }
+._ml0 { margin-left: 0 !important }
+._mr0 { margin-right: 0 !important }
 
 // for blockquote and q
 ._no_quote { quotes: none; &:before, &:after { content: ''; content: none; }}
+
 
 // control overflow
 ._no_overflow,
 ._no_scroll { overflow: hidden !important }
 ._no_scroll_x { overflow-x: hidden !important; }
 ._no_scroll_y { overflow-y: hidden !important; }
+._no_wrap { white-space: nowrap !important }
 
 // hide from screen readers, but maintain visual layout
 ._invisible { visibility: hidden !important }
