--- a/src/pug/core/core/html.html.pug
+++ b/src/pug/core/core/html.html.pug
@@ -5,17 +5,15 @@ block append vars
   - siteUrl += '/core/html.html'
 
 block header
-  header._container: pre
-    .
+  header._container
+    pre.
       Hello, there.
-
       This is a placeholder to get you started.
-
       Copy the code from '!{pageid}' to create your own page.
 
       #[a(href='./') Back]
-    |
-    |
+    hr
 
 block article
-  article._container: pre: +pageData()
+  article._container
+    pre: +pageData()
