--- a/src/scss/core/custom.scss
+++ b/src/scss/core/custom.scss
@@ -21,7 +21,7 @@
 // ._menuitem { margin:.25rem }
 
 .pre { font-size:.9em }
-._scrollable.pre { padding-bottom:1em; }
+._scrollable.pre { padding-bottom:.5rem }
 
 footer {
   & { position:fixed;top:auto;bottom:0;left:0;right:0 }
